"Removed 'align-items: right' from nav in temples-large.css and corrected font-weight unit in figcaption from '400px' to '400' in temples.css."

--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -61,7 +61,6 @@
       
       nav {
         flex: 1;
-        align-items: right;
       }
 
       .images {
