--- a/styles/temples.css
+++ b/styles/temples.css
@@ -210,7 +210,7 @@ header{
 
 figcaption{
   padding: 20px;
-  font-weight: 400px;
+  font-weight: 400;
 }
 
 figure img{
